gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23968.d
version https://git-lfs.github.com/spec/v1
oid sha256:addedbc7cd7d20075f222a67c03b9542457b90d3a98cec7ddb0da9fbb7c4c537
size 311
